--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,3 +32,7 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+dependencies {
+    implementation 'com.android.support:customtabs:27.1.1'
+}
