--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,8 +25,10 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 17
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        vectorDrawables.useSupportLibrary = true
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -35,4 +37,6 @@ android {
 
 dependencies {
     implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
