--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/index.html
+    - assets/css/
+    - assets/images/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
