--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:7.0.4'
     }
 }
 
@@ -22,7 +22,7 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 17
@@ -33,6 +33,7 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+        disable 'RestrictedApi'
     }
     buildTypes {
         debug {
@@ -45,10 +46,10 @@ android {
         }
     }
     dependencies {
-        implementation 'androidx.webkit:webkit:1.4.0'
-        implementation 'androidx.browser:browser:1.3.0'
-        implementation 'androidx.appcompat:appcompat:1.2.0'
-        implementation 'com.squareup.okhttp3:mockwebserver:3.14.7'
+        implementation 'androidx.webkit:webkit:1.2.0'
+        implementation 'androidx.browser:browser:1.4.0'
+        implementation 'androidx.appcompat:appcompat:1.3.1'
+        implementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
         implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     }
 }
