--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -60,10 +60,16 @@ flutter {
     source '../..'
 }
 
+ext {
+    geckoview_channel = "nightly"
+    geckoview_version = "98.0.20220111093827"
+}
+
 dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation "org.mozilla.geckoview:geckoview-${geckoview_channel}:${geckoview_version}"
 }
