--- a/flutter_inappwebview_web/pubspec.yaml
+++ b/flutter_inappwebview_web/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   js: ^0.6.4
   flutter_inappwebview_platform_interface: ^1.0.6
+  web: ^0.4.0
 
 dev_dependencies:
   flutter_test:
