--- a/flutter_inappwebview/example/android/gradle.properties
+++ b/flutter_inappwebview/example/android/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx1536M
+org.gradle.jvmargs=-xmx4608m
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableR8=true
