--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -10,6 +10,7 @@ topics:
   - webview-flutter
   - inappwebview
   - browser
+publish_to: none
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -18,11 +19,31 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.0.10
-  flutter_inappwebview_android: ^1.0.12
-  flutter_inappwebview_ios: ^1.0.13
-  flutter_inappwebview_macos: ^1.0.11
-  flutter_inappwebview_web: ^1.0.8
+  flutter_inappwebview_platform_interface:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_platform_interface
+  flutter_inappwebview_android:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_android
+  flutter_inappwebview_ios:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_ios
+  flutter_inappwebview_macos:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_macos
+  flutter_inappwebview_web:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_web
 
 dev_dependencies:
   flutter_test:
