--- a/flutter_inappwebview_web/pubspec.yaml
+++ b/flutter_inappwebview_web/pubspec.yaml
@@ -10,6 +10,7 @@ topics:
   - webview-flutter
   - inappwebview
   - browser
+publish_to: none
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -21,7 +22,11 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.4
-  flutter_inappwebview_platform_interface: ^1.0.10
+  flutter_inappwebview_platform_interface:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_platform_interface
 
 dev_dependencies:
   flutter_test:
