--- a/flutter_inappwebview_windows/pubspec.yaml
+++ b/flutter_inappwebview_windows/pubspec.yaml
@@ -10,6 +10,7 @@ topics:
   - webview-flutter
   - inappwebview
   - browser
+publish_to: none
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
@@ -18,8 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: #^1.0.10
-    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_platform_interface:
+    git:
+      url: https://github.com/Shoptagr/flutter_inappwebview.git
+      ref: master
+      path: flutter_inappwebview_platform_interface
 
 dev_dependencies:
   flutter_test:
