--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -18,11 +18,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.0.10
-  flutter_inappwebview_android: ^1.0.12
-  flutter_inappwebview_ios: ^1.0.13
-  flutter_inappwebview_macos: ^1.0.11
-  flutter_inappwebview_web: ^1.0.8
+  flutter_inappwebview_platform_interface:
+    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_android:
+    path: ../flutter_inappwebview_android
+  flutter_inappwebview_ios:
+    path: ../flutter_inappwebview_ios
+  flutter_inappwebview_macos:
+    path: ../flutter_inappwebview_macos
+  flutter_inappwebview_web:
+     path: ../flutter_inappwebview_web
 
 dev_dependencies:
   flutter_test:
