--- a/flutter_inappwebview_web/pubspec.yaml
+++ b/flutter_inappwebview_web/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   js: ^0.6.4
-  flutter_inappwebview_platform_interface: ^1.0.10
+  flutter_inappwebview_platform_interface:
+    path: ../flutter_inappwebview_platform_interface
+  
+  
 
 dev_dependencies:
   flutter_test:
