--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -10,6 +10,10 @@ topics:
   - webview-flutter
   - inappwebview
   - browser
+platforms:
+  android:
+  ios:
+  web:
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
