--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_inappwebview
 description: Flutter plugin that allows you to incorporate WebView widgets into your Flutter app,
   to use headless WebViews, or to use In-App browsers.
-# repository: https://github.com/soomrozaid/flutter_inappwebview.git
+repository: https://github.com/pichillilorenzo/flutter_inappwebview.git
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues?q=is%3Aopen+is%3Aissue
 version: 6.3.0
 
@@ -22,8 +22,8 @@ flutter:
         default_package: flutter_inappwebview_macos
       web:
         default_package: flutter_inappwebview_web
-      windows:
-        default_package: flutter_inappwebview_windows
+      # windows:
+      #   default_package: flutter_inappwebview_windows
 
 dependencies:
   flutter:
@@ -36,4 +36,4 @@ dependencies:
   flutter_inappwebview_macos: 1.0.11
   flutter_inappwebview_platform_interface: 1.0.11
   flutter_inappwebview_web: 1.0.8
-  flutter_inappwebview_windows: 1.0.11
+  # flutter_inappwebview_windows: 1.0.11
