--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
   flutter_inappwebview_android: ^1.0.12
   flutter_inappwebview_ios: ^1.0.13
   flutter_inappwebview_macos: ^1.0.11
-  flutter_inappwebview_web: ^1.0.8
+  flutter_inappwebview_web:
+    git:
+      url: https://github.com/hamzaalmahdi/flutter_inappwebview.git
+      path: flutter_inappwebview_web
 
 dev_dependencies:
   flutter_test:
