--- a/flutter_inappwebview/example/android/app/build.gradle
+++ b/flutter_inappwebview/example/android/app/build.gradle
@@ -30,8 +30,7 @@ android {
         targetCompatibility 1.8
     }
 
-    compileSdkVersion 34
-
+    compileSdk 34
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -62,9 +61,9 @@ flutter {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.google.android.material:material:1.6.1'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.android.support:multidex:1.0.3'
 }
