--- a/flutter_inappwebview_macos/pubspec.yaml
+++ b/flutter_inappwebview_macos/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview_macos
 description: macOS implementation of the flutter_inappwebview plugin.
-version: 1.0.12
+version: 1.1.0
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_macos
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
@@ -12,8 +12,8 @@ topics:
   - browser
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: ^3.5.0
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
