--- a/flutter_inappwebview_windows/pubspec.yaml
+++ b/flutter_inappwebview_windows/pubspec.yaml
@@ -12,13 +12,13 @@ topics:
   - browser
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: ^3.5.0
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: #^1.0.10
+  flutter_inappwebview_platform_interface: #^1.1.0
     path: ../flutter_inappwebview_platform_interface
 
 dev_dependencies:
