--- a/dev_packages/generators/pubspec.yaml
+++ b/dev_packages/generators/pubspec.yaml
@@ -4,17 +4,17 @@ version: 1.0.0
 publish_to: none
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: ^3.5.0
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  build: ^2.4.0
-  source_gen: ^1.3.1
+  build: ^2.4.1
+  source_gen: ^1.5.0
   flutter_inappwebview_internal_annotations: ^1.1.1
 
 dev_dependencies:
-  build_runner: ^2.4.0
-  build_test: ^2.1.7
-  test: ^1.24.2
+  build_runner: ^2.4.12
+  build_test: ^2.2.2
+  test: ^1.25.8
