--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   },
   "private": true,
   "scripts": {
-    "build": "flutter pub run build_runner build --delete-conflicting-outputs",
-    "watch": "flutter pub run build_runner watch --delete-conflicting-outputs",
-    "publish:dry": "flutter pub publish --dry-run",
-    "publish": "flutter pub publish",
-    "format": "dart format flutter_inappwebview/lib flutter_inappwebview/example/integration_test flutter_inappwebview_platform_interface/lib flutter_inappwebview_android/lib flutter_inappwebview_ios/lib flutter_inappwebview_macos/lib  flutter_inappwebview_web/lib  flutter_inappwebview_windows/lib",
-    "build:publish": "npm run format && npm run build && flutter pub publish",
-    "docs:gen": "flutter pub global activate dartdoc && flutter pub global run dartdoc:dartdoc",
-    "docs:serve": "flutter pub global activate dhttpd && flutter pub global run dhttpd:dhttpd --path doc/api"
+    "build": ".fvm/flutter_sdk/bin/flutter pub run build_runner build --delete-conflicting-outputs",
+    "watch": ".fvm/flutter_sdk/bin/flutter pub run build_runner watch --delete-conflicting-outputs",
+    "publish:dry": ".fvm/flutter_sdk/bin/flutter pub publish --dry-run",
+    "publish": ".fvm/flutter_sdk/bin/flutter pub publish",
+    "format": ".fvm/flutter_sdk/bin/dart format flutter_inappwebview/lib flutter_inappwebview/example/integration_test flutter_inappwebview_platform_interface/lib flutter_inappwebview_android/lib flutter_inappwebview_ios/lib flutter_inappwebview_macos/lib  flutter_inappwebview_web/lib  flutter_inappwebview_windows/lib",
+    "build:publish": "npm run format && npm run build && .fvm/flutter_sdk/bin/flutter pub publish",
+    "docs:gen": ".fvm/flutter_sdk/bin/dart doc",
+    "docs:serve": ".fvm/flutter_sdk/bin/flutter pub global activate dhttpd && .fvm/flutter_sdk/bin/flutter pub global run dhttpd:dhttpd --path doc/api"
   },
   "repository": {
     "type": "git",
