--- a/flutter_inappwebview_windows/pubspec.yaml
+++ b/flutter_inappwebview_windows/pubspec.yaml
@@ -18,8 +18,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: #^1.1.0
-    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_platform_interface: ^1.1.0
 
 dev_dependencies:
   flutter_test:
