--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview
 description: A Flutter plugin that allows you to add an inline webview, to use an headless webview, and to open an in-app browser window.
-version: 6.0.0
+version: 6.0.1
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
@@ -20,7 +20,7 @@ dependencies:
     sdk: flutter
   flutter_inappwebview_platform_interface: ^1.0.10
   flutter_inappwebview_android: ^1.0.12
-  flutter_inappwebview_ios: ^1.0.13
+  flutter_inappwebview_ios: '>=1.0.13 <1.1.0'
   flutter_inappwebview_macos: ^1.0.11
   flutter_inappwebview_web: ^1.0.8
 
