--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -77,6 +77,12 @@ list(APPEND PLUGIN_SOURCES
   "types/callbacks_complete.h"
   "types/screenshot_configuration.cpp"
   "types/screenshot_configuration.h"
+  "types/create_window_action.cpp"
+  "types/create_window_action.h"
+  "types/new_window_requested_args.cpp"
+  "types/new_window_requested_args.h"
+  "types/window_features.cpp"
+  "types/window_features.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
