--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -4,6 +4,8 @@ version: 6.1.0+1
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
+funding:
+  - https://inappwebview.dev/donate/
 topics:
   - html
   - webview
