--- a/flutter_inappwebview_android/pubspec.yaml
+++ b/flutter_inappwebview_android/pubspec.yaml
@@ -4,6 +4,8 @@ version: 1.1.0+1
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_android
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
+funding:
+  - https://inappwebview.dev/donate/
 topics:
   - html
   - webview
@@ -12,8 +14,8 @@ topics:
   - browser
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
-  flutter: ">=3.0.0"
+  sdk: ^3.5.0
+  flutter: ">=3.24.0"
 
 dependencies:
   flutter:
