windows: Updated shouldOverrideUrlLoading implementation using the Chrome DevTools Protocol API Fetch.requestPaused event, platform interface: Updated Uint8List conversion inside fromMap methods

--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -47,6 +47,8 @@ list(APPEND PLUGIN_SOURCES
   "utils/string.h"
   "utils/util.h"
   "utils/flutter.h"
+  "utils/base64.cpp"
+  "utils/base64.h"
   "types/channel_delegate.cpp"
   "types/channel_delegate.h"
   "types/base_callback_result.h"
