--- a/flutter_inappwebview_windows/pubspec.yaml
+++ b/flutter_inappwebview_windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview_windows
 description: Windows implementation of the flutter_inappwebview plugin.
-version: 0.3.0+1
+version: 0.4.0
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_windows
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
@@ -20,7 +20,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.1.1
+  flutter_inappwebview_platform_interface: ^1.2.0
 
 dev_dependencies:
   flutter_test:
