--- a/flutter_inappwebview_ios/pubspec.yaml
+++ b/flutter_inappwebview_ios/pubspec.yaml
@@ -1,11 +1,9 @@
 name: flutter_inappwebview_ios
 description: iOS implementation of the flutter_inappwebview plugin.
-version: 1.1.2
+version: 1.0.13
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_ios
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
-funding:
-  - https://inappwebview.dev/donate/
 topics:
   - html
   - webview
@@ -14,19 +12,19 @@ topics:
   - browser
 
 environment:
-  sdk: ^3.5.0
-  flutter: ">=3.24.0"
+  sdk: ">=2.17.0 <4.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.3.0
+  flutter_inappwebview_platform_interface: ^1.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  plugin_platform_interface: ^2.1.8
+  flutter_lints: ^2.0.0
+  plugin_platform_interface: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
