--- a/flutter_inappwebview/example/pubspec.yaml
+++ b/flutter_inappwebview/example/pubspec.yaml
@@ -37,14 +37,14 @@ dependency_overrides:
     path: ../../flutter_inappwebview_platform_interface
   flutter_inappwebview_android:
     path: ../../flutter_inappwebview_android
-  flutter_inappwebview_ios:
-    path: ../../flutter_inappwebview_ios
-  flutter_inappwebview_macos:
-    path: ../../flutter_inappwebview_macos
-  flutter_inappwebview_web:
-    path: ../../flutter_inappwebview_web
-  flutter_inappwebview_windows:
-    path: ../../flutter_inappwebview_windows
+#  flutter_inappwebview_ios:
+#    path: ../../flutter_inappwebview_ios
+#  flutter_inappwebview_macos:
+#    path: ../../flutter_inappwebview_macos
+#  flutter_inappwebview_web:
+#    path: ../../flutter_inappwebview_web
+#  flutter_inappwebview_windows:
+#    path: ../../flutter_inappwebview_windows
 
 dev_dependencies:
   flutter_test:
