--- a/flutter_inappwebview_android/pubspec.yaml
+++ b/flutter_inappwebview_android/pubspec.yaml
@@ -20,7 +20,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: ^1.4.0
+  flutter_inappwebview_platform_interface: # ^1.4.0
+    path: ../flutter_inappwebview_platform_interface
 
 dev_dependencies:
   flutter_test:
