ios: implemented new changes of flutter_inappwebview_platform_interface, Added support for UserScript.allowedOriginRules parameter

--- a/flutter_inappwebview/example/pubspec.yaml
+++ b/flutter_inappwebview/example/pubspec.yaml
@@ -37,8 +37,8 @@ dependency_overrides:
     path: ../../flutter_inappwebview_platform_interface
   flutter_inappwebview_android:
     path: ../../flutter_inappwebview_android
-#  flutter_inappwebview_ios:
-#    path: ../../flutter_inappwebview_ios
+  flutter_inappwebview_ios:
+    path: ../../flutter_inappwebview_ios
 #  flutter_inappwebview_macos:
 #    path: ../../flutter_inappwebview_macos
 #  flutter_inappwebview_web:
