macos: implemented new changes of flutter_inappwebview_platform_interface, Added support for UserScript.allowedOriginRules parameter

--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
     path: ../flutter_inappwebview_android
   flutter_inappwebview_ios: #^1.2.0
     path: ../flutter_inappwebview_ios
-#  flutter_inappwebview_macos: ^1.2.0
-#  flutter_inappwebview_web: ^1.2.0
+  flutter_inappwebview_macos: #^1.2.0
+    path: ../flutter_inappwebview_macos
+  flutter_inappwebview_web: #^1.2.0
+    path: ../flutter_inappwebview_web
 #  flutter_inappwebview_windows: ^0.7.0
 
 dev_dependencies:
