--- a/flutter_inappwebview/example/pubspec.yaml
+++ b/flutter_inappwebview/example/pubspec.yaml
@@ -39,10 +39,10 @@ dependency_overrides:
     path: ../../flutter_inappwebview_android
   flutter_inappwebview_ios:
     path: ../../flutter_inappwebview_ios
-#  flutter_inappwebview_macos:
-#    path: ../../flutter_inappwebview_macos
-#  flutter_inappwebview_web:
-#    path: ../../flutter_inappwebview_web
+  flutter_inappwebview_macos:
+    path: ../../flutter_inappwebview_macos
+  flutter_inappwebview_web:
+    path: ../../flutter_inappwebview_web
 #  flutter_inappwebview_windows:
 #    path: ../../flutter_inappwebview_windows
 
