windows: implemented features of flutter_inappwebview_platform_interface 1.4.0, Updated scrollMultiplier default value from 6 to 1, Added support for UserScript.allowedOriginRules and UserScript.forMainFrameOnly parameters, Fixed get_optional_fl_map_value implementation in utils/flutter.h

--- a/flutter_inappwebview/pubspec.yaml
+++ b/flutter_inappwebview/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
     path: ../flutter_inappwebview_macos
   flutter_inappwebview_web: #^1.2.0
     path: ../flutter_inappwebview_web
-#  flutter_inappwebview_windows: ^0.7.0
+  flutter_inappwebview_windows: #^0.7.0
+    path: ../flutter_inappwebview_windows
 
 dev_dependencies:
   flutter_test:
