--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -93,6 +93,8 @@ list(APPEND PLUGIN_SOURCES
   "types/custom_scheme_response.h"
   "types/custom_scheme_registration.cpp"
   "types/custom_scheme_registration.h"
+  "types/javascript_handler_function_data.cpp"
+  "types/javascript_handler_function_data.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
@@ -107,7 +109,6 @@ list(APPEND PLUGIN_SOURCES
   "custom_platform_view/util/string_converter.h"
   "custom_platform_view/util/swizzle.h"
   "plugin_scripts_js/plugin_scripts_util.h"
-  "plugin_scripts_js/javascript_bridge_js.cpp"
   "plugin_scripts_js/javascript_bridge_js.h"
   "webview_environment/webview_environment_settings.cpp"
   "webview_environment/webview_environment_settings.h"
