windows: Implemented onReceivedServerTrustAuthRequest WebView event, Implemented clearSslPreferences WebView method

--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -99,6 +99,8 @@ list(APPEND PLUGIN_SOURCES
   "types/custom_scheme_registration.h"
   "types/javascript_handler_function_data.cpp"
   "types/javascript_handler_function_data.h"
+  "types/ssl_error.cpp"
+  "types/ssl_error.h"
   "types/url_credential.cpp"
   "types/url_credential.h"
   "types/url_protection_space.cpp"
@@ -113,6 +115,10 @@ list(APPEND PLUGIN_SOURCES
   "types/client_cert_challenge.h"
   "types/client_cert_response.cpp"
   "types/client_cert_response.h"
+  "types/server_trust_challenge.cpp"
+  "types/server_trust_challenge.h"
+  "types/server_trust_auth_response.cpp"
+  "types/server_trust_auth_response.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
