--- a/dev_packages/generators/pubspec.yaml
+++ b/dev_packages/generators/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   build: ^2.4.1
   source_gen: ^1.5.0
+  collection: any
   flutter_inappwebview_internal_annotations: ^1.1.1
 
 dev_dependencies:
