--- a/flutter_inappwebview_macos/pubspec.yaml
+++ b/flutter_inappwebview_macos/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview_macos
 description: macOS implementation of the flutter_inappwebview plugin.
-version: 1.2.0
+version: 1.2.0-beta.1
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_macos
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
