--- a/flutter_inappwebview_windows/pubspec.yaml
+++ b/flutter_inappwebview_windows/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_inappwebview_windows
 description: Windows implementation of the flutter_inappwebview plugin.
-version: 0.7.0
+version: 0.7.0-beta.1
 homepage: https://inappwebview.dev/
 repository: https://github.com/pichillilorenzo/flutter_inappwebview/tree/master/flutter_inappwebview_windows
 issue_tracker: https://github.com/pichillilorenzo/flutter_inappwebview/issues
