--- a/flutter_inappwebview_web/pubspec.yaml
+++ b/flutter_inappwebview_web/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   web: ^1.0.0
-  flutter_inappwebview_platform_interface: #^1.4.0
-    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_platform_interface: ^1.4.0-beta.1
+    #path: ../flutter_inappwebview_platform_interface
 
 dev_dependencies:
   flutter_test:
