added getProcessInfos and getFailureReportFolderPath WebViewEnvironment methods, added onProcessInfosChanged WebViewEnvironment event, fix possible Windows crash on App closing"

--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -135,6 +135,10 @@ list(APPEND PLUGIN_SOURCES
   "types/download_start_response.h"
   "types/browser_process_exited_detail.cpp"
   "types/browser_process_exited_detail.h"
+  "types/browser_process_info.cpp"
+  "types/browser_process_info.h"
+  "types/browser_process_infos_changed_detail.cpp"
+  "types/browser_process_infos_changed_detail.h"
   "custom_platform_view/custom_platform_view.cc"
   "custom_platform_view/custom_platform_view.h"
   "custom_platform_view/texture_bridge.cc"
