--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -852,7 +852,7 @@
       "login": "yerkejs",
       "name": "Yelzhan Yerkebulan",
       "avatar_url": "https://avatars.githubusercontent.com/u/33483071?v=4",
-      "profile": "http://hero.io",
+      "profile": "https://hero.io",
       "contributions": [
         "code"
       ]
