fixed custom popup linux positions, update linux color picker impl

--- a/flutter_inappwebview_linux/linux/CMakeLists.txt
+++ b/flutter_inappwebview_linux/linux/CMakeLists.txt
@@ -127,6 +127,7 @@ list(APPEND PLUGIN_SOURCES
   "in_app_webview/user_content_controller.cc"
   "in_app_webview/webview_channel_delegate.cc"
   "types/channel_delegate.cc"
+  "types/color_picker_popup.cc"
   "types/content_world.cc"
   "types/context_menu_popup.cc"
   "types/create_window_action.cc"
