updated linux types, added linux to_fl_map utility

--- a/flutter_inappwebview_linux/linux/CMakeLists.txt
+++ b/flutter_inappwebview_linux/linux/CMakeLists.txt
@@ -132,12 +132,22 @@ list(APPEND PLUGIN_SOURCES
   "types/create_window_action.cc"
   "types/download_start_request.cc"
   "types/download_start_response.cc"
-  "types/http_auth_types.cc"
+  "types/http_auth_response.cc"
+  "types/http_authentication_challenge.cc"
   "types/javascript_handler_function_data.cc"
-  "types/js_dialog_types.cc"
+  "types/js_alert_request.cc"
+  "types/js_alert_response.cc"
+  "types/js_before_unload_response.cc"
+  "types/js_confirm_request.cc"
+  "types/js_confirm_response.cc"
+  "types/js_prompt_request.cc"
+  "types/js_prompt_response.cc"
   "types/navigation_action.cc"
-  "types/permission_types.cc"
+  "types/permission_request.cc"
+  "types/permission_response.cc"
   "types/plugin_script.cc"
+  "types/url_credential.cc"
+  "types/url_protection_space.cc"
   "types/url_request.cc"
   "types/user_script.cc"
   "types/web_resource_error.cc"
