--- a/flutter_inappwebview_linux/example/pubspec.yaml
+++ b/flutter_inappwebview_linux/example/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   flutter_inappwebview_platform_interface:
     path: ../../flutter_inappwebview_platform_interface
 
+  path_provider: ^2.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -57,9 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
